# adhesion-rs

./: .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  README.md.skt.md  appveyor.yml
.github/: dependabot.yml
examples/: date.rs  newton_sqrt.rs  square_root.rs
src/: lib.rs
src/parse_generics_shim_util/: mod.rs  parse_constr.rs  parse_generics_shim.rs  parse_where_shim.rs
tests/: lib.rs
