[package]
name = "adhesion"
description = "A set of macros for design by contact in Rust. The design of this library was inspired by D's contract programming facilities."
version = "0.5.0"  # remember to update html_root_url
authors = ["Erich Gubler <erichdongubler@gmail.com>"]
edition = "2018"

categories = ["algorithms", "development-tools::testing", "rust-patterns"]
documentation = "https://docs.rs/adhesion"
include = ["**/*.rs", "Cargo.toml", "README.md", "README.md.skt.md", "LICENSE-MIT"]
keywords = ["contract", "design", "invariant"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ErichDonGubler/adhesion-rs"

[lib]
proc-macro = true

[badges]
appveyor = { repository = "ErichDonGubler/adhesion-rs" }
travis-ci = { repository = "ErichDonGubler/adhesion-rs" }

[build-dependencies]
skeptic = "0.13.4"

[dev-dependencies]
galvanic-assert = "0.8.7"
scan-rules = "0.2.0"
skeptic = "0.13.4"

[dependencies]
proc-macro2 = "0.4.24"
quote = "0.6.10"
syn = { version = "0.15.23", features = ["full"] }
